fix: Pevent some awkward whitespace

--- a/catalog/cat_app/assets/sass/app.scss
+++ b/catalog/cat_app/assets/sass/app.scss
@@ -3,6 +3,10 @@
 @import "neat/neat";
 @import "base/base";
 
+body {
+	margin: 0;
+}
+
 .left {
 	float: left !important;
 }
